# TinyCaml

./: TinyCaml.opam  dune-project
lib/: ast.ml  eval.ml  lexer.mll  parser.mly
test/: dune  test_TinyCaml.ml
